unpackaged/main/default/objects/SAP_Contracts__c/SAP_Contracts__c.object-meta.xml
<CustomObject>
    <description>This object stores information about contracts that are in SAP but not in Salesforce and is to be used for reporting purporses.</description>
    <label>SAP Contracts</label>
    <nameField>
        <displayFormat>SAPC-{0000}</displayFormat>
        <label>SAP Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>