unpackaged/main/default/objects/SAP_Contracts__c/fields/Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Value__c</fullName>
    <label>$ Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>