unpackaged/main/default/objects/SAP_Contracts__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number </label>
    <length>255</length>
    <type>Text</type>
</CustomField>