unpackaged/main/default/objects/SAP_Contracts__c/fields/Free_Text09__c.field-meta.xml
<CustomField>
    <fullName>Free_Text09__c</fullName>
    <label>Free Text09</label>
    <length>255</length>
    <type>Text</type>
</CustomField>