unpackaged/main/default/objects/SAP_Contracts__c/fields/Sales_Employee__c.field-meta.xml
<CustomField>
    <fullName>Sales_Employee__c</fullName>
    <label>Sales Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>