unpackaged/main/default/objects/SAP_Contracts__c/fields/SF_Contract__c.field-meta.xml
<CustomField>
    <fullName>SF_Contract__c</fullName>
    <label>SF Contract #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>